Fix sidebar covering parts of the viewport/editor
* Display viewport _besides_ the sidebar, not under it.
* Introduce a transform matrix that respects the
  viewport position in the client (i.e. the position
  of the DOM element in the browser client).
* Use this matrix to transform mouse events because those
  are always relative to the browser client.

--- a/public/css/tales.css
+++ b/public/css/tales.css
@@ -330,15 +330,12 @@ input[type="checkbox"]:focus {
 }
 
 #editor {
+  display: flex;
   height: 100%;
   background-color: var(--editor-bg);
 }
 
 #editor .sidebar {
-  position: absolute;
-  left: 0;
-  top: 0;
-  bottom: 0;
   display: flex;
   flex-direction: column;
   min-width: var(--tale-preview-width);
@@ -571,6 +568,7 @@ input[type="checkbox"]:focus {
 }
 
 .viewport {
+  flex: 1;
 }
 .viewport > .scene {
 }
